fix(comp:*): footer buttons aren't aligned when loading

--- a/packages/components/modal/style/index.less
+++ b/packages/components/modal/style/index.less
@@ -122,7 +122,9 @@
   }
 
   &-footer {
-    text-align: end;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     padding: var(--ix-spacing-md) var(--ix-spacing-lg);
 
     .@{button-prefix} + .@{button-prefix} {
