--- a/packages/components/time-picker/style/index.less
+++ b/packages/components/time-picker/style/index.less
@@ -14,7 +14,9 @@
   }
 
   &-footer {
-    text-align: end;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
     border-top: @time-picker-overlay-footer-border-width @time-picker-overlay-footer-border-style
       @time-picker-overlay-footer-border-color;
     padding: @time-picker-overlay-footer-padding;
@@ -59,7 +61,9 @@
     }
   
     &-footer {
-      text-align: end;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
       border-top: @time-range-picker-overlay-footer-border-width @time-range-picker-overlay-footer-border-style
         @time-range-picker-overlay-footer-border-color;
       padding: @time-range-picker-overlay-footer-padding;
